--- a/app.json
+++ b/app.json
@@ -21,7 +21,9 @@
         "backgroundColor": "#ffffff"
       },
       "package": "com.oleksandrserhiienko.readbook",
-      "permissions": ["INTERNET"],
+      "permissions": [
+        "INTERNET"
+      ],
       "usesCleartextTraffic": true,
       "networkSecurityConfig": {
         "baseConfig": {
@@ -42,7 +44,8 @@
       "favicon": "./assets/images/favicon.png"
     },
     "plugins": [
-      "expo-router"
+      "expo-router",
+      "expo-sqlite"
     ],
     "experiments": {
       "typedRoutes": true
