--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
-    "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.6",
-    "expo": "~53.0.11",
+    "expo": "53.0.12",
     "expo-crypto": "^14.1.5",
     "expo-font": "~13.3.1",
     "expo-linking": "~7.1.5",
@@ -25,12 +25,12 @@
     "expo-splash-screen": "~0.30.9",
     "expo-sqlite": "^15.2.12",
     "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.8",
-    "expo-web-browser": "~14.1.6",
+    "expo-system-ui": "~5.0.9",
+    "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.515.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.3",
+    "react-native": "0.79.4",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
