--- a/package.json
+++ b/package.json
@@ -16,22 +16,22 @@
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-navigation/native": "^7.1.6",
-    "expo": "53.0.12",
+    "expo": "^53.0.20",
     "expo-crypto": "^14.1.5",
-    "expo-font": "~13.3.1",
-    "expo-linking": "~7.1.5",
-    "expo-router": "~5.1.0",
+    "expo-font": "^13.3.2",
+    "expo-linking": "^7.1.7",
+    "expo-router": "^5.1.4",
     "expo-sharing": "^13.1.5",
     "expo-speech": "^13.1.7",
-    "expo-splash-screen": "~0.30.9",
-    "expo-sqlite": "^15.2.12",
+    "expo-splash-screen": "^0.30.10",
+    "expo-sqlite": "^15.2.14",
     "expo-status-bar": "~2.2.3",
-    "expo-system-ui": "~5.0.9",
+    "expo-system-ui": "^5.0.10",
     "expo-web-browser": "~14.2.0",
     "lucide-react-native": "^0.515.0",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.4",
+    "react-native": "^0.79.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
@@ -43,7 +43,7 @@
     "@types/react": "~19.0.10",
     "@types/react-native": "^0.73.0",
     "jest": "^29.2.1",
-    "jest-expo": "~53.0.7",
+    "jest-expo": "^53.0.9",
     "react-test-renderer": "19.0.0",
     "typescript": "~5.8.3"
   },
